--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,10 @@
 org.gradle.jvmargs  = -Xmx2G
 org.gradle.parallel = true
 
-minecraft_version   = 1.20.4
-yarn_mappings       = 1.20.4+build.1
-loader_version      = 0.15.1
+minecraft_version   = 24w04a
+yarn_mappings       = 24w04a+build.3
+loader_version      = 0.15.6
 
-mod_version         = 0.1.1
+mod_id              = pixel
+mod_version         = 0.2.0
 maven_group         = xyz.dicedpixels
-archives_base_name  = pixel
